[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fountaineer"
version = "1.0.0"
description = "A Python tool for compiling Fountain scripts to formatted PDFs."
authors = [{ name = "Brian Day", email = "brian.day1@gmail.com" }]
dependencies = ["reportlab"]
requires-python = ">=3.7"

[project.scripts]
fountaineer = "fountaineer.cli:main"
